rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__subquery_dimensions__subquery_dimension_in_projection.snap
---
source: cubesqlplanner/src/tests/subquery_dimensions.rs
expression: sql
---
SELECT "Customers_totalSpend_subquery"."total_spend" "customers__total_spend", sum("sales".amount) "sales__total_amount" 
FROM  sales  AS "sales"
LEFT JOIN  customers  AS "customers" ON "sales".customer_id = "customers".id
LEFT JOIN (SELECT "customers".id "customers__id", sum("customer_orders".amount) "total_spend" 
FROM  customers  AS "customers"
LEFT JOIN  customer_orders  AS "customer_orders" ON "customers".id = "customer_orders".customer_id
GROUP BY 1
ORDER BY  2  DESC) AS "Customers_totalSpend_subquery" ON (("Customers_totalSpend_subquery"."customers__id" = "customers".id))
GROUP BY 1
ORDER BY  2  DESC
